client/viewclient/viewclient.css
.appshowcase {
  position: relative;
}

.discount,
.price {
  color: #a4d007;
  background-color: #4c6b22;
  position: absolute;
  bottom: 5px;
  right: 15px;
  padding: 5px;
  font-size: 15px;
  text-align: center;
}

.discount>img {
  max-height: 116px;
}

.item-img {
  float: left;
  padding-right: 5px;
  height: 70px;
}

.devpub,
.tags {
  font-size: 0.8em;
}

.price {
  float: right;
}

.title,
.devpub,
.tags {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 425px;
}

.col-sm>a {
  color: white;
  text-decoration: none !important;
}

/* .col-sm:hover {
  background-color: #d8d8d8;
} */

.col-sm:not(.appshowcase) {
  border-bottom: 1px dotted #d8d8d8;
  padding-bottom: 2px;
  padding-top: 2px;
}

#quickfilters {
  width: 500px;
  padding: 15px;
}

.avatar {
  float: left;
  height: calc(1.75rem + 1rem + 1rem + 1em);
  padding-right: 2vh;
  padding-top: 1vh;
}

.sorter {
  float: right;
  margin-right: 5px;
}

.sorter>button {
  background-color: #105E7F !important;
  border-color: #105E7F !important;
}

.show>.btn-secondary.dropdown-toggle:focus {
  box-shadow: 0 0 0 0.2rem rgba(16, 94, 127, 0.5) !important;
}

.paginator.back {
  float: left;
}

.paginator.next {
  float: right;
}

.pagecontrols {
  text-align: center;
  line-height: 31px;
}

.overwhelmingly-positive,
.very-positive,
.mostly-positive,
.positive {
  color: #66C0F4;
}

.mixed {
  color: #B9A074;
}

.overwhelmingly-negative,
.very-negative,
.mostly-negative,
.negative {
  color: #A34C25;
}

[colorable] {
  border-radius: 5px;
  border: 1px solid black;
  padding: 5px;
  line-height: calc(20px + 1em);
  color: white;
}

[colorable]:hover {
  text-decoration: none;
  color: white;
}

nav.navbar {
  background-color: #1A394E !important;
}

body {
  color: white;
  background-color: black;
}

.modal-dialog {
  color: black;
}

